--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "prettier": "^3.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
