--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.1.0",
-    "@mux/mux-node": "^8.5.3",
-    "@mux/mux-player-react": "^2.6.0",
-    "@mux/mux-uploader-react": "^1.0.0-beta.17",
+    "@auth/prisma-adapter": "^2.2.0",
+    "@mux/mux-node": "8.7.1",
+    "@mux/mux-player-react": "^2.7.0",
+    "@mux/mux-uploader-react": "^1.0.0-beta.18",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
-    "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.18",
+    "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "prettier": "^3.3.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
-    "typescript": "^5.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18",
-    "prisma": "^5.14.0"
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
+    "prisma": "^5.15.0",
+    "typescript": "^5.4.5"
   }
 }
