--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mux/mux-uploader-react": "^1.0.0-beta.18",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
-    "next": "^14.2.3",
-    "next-auth": "^5.0.0-beta.19",
+    "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.18",
     "prettier": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
