--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mux/mux-node": "8.7.1",
     "@mux/mux-player-react": "^2.7.0",
     "@mux/mux-uploader-react": "^1.0.0-beta.18",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.0",
     "bcryptjs": "^2.4.3",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.18",
@@ -21,6 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "resend": "^3.3.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
