--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
+    "@hookform/resolvers": "^3.6.0",
     "@mux/mux-node": "8.7.1",
     "@mux/mux-player-react": "^2.7.0",
     "@mux/mux-uploader-react": "^1.0.0-beta.18",
@@ -20,6 +21,7 @@
     "prettier": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.0",
     "resend": "^3.3.0",
     "uuid": "^10.0.0",
