--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ AUTH_SECRET=AUTH_SECRET
 AUTH_GOOGLE_ID=AUTH_GOOGLE_ID
 AUTH_GOOGLE_SECRET=AUTH_GOOGLE_SECRET
 DATABASE_URL=DATABASE_URL
+GITHUB_CLIENT_ID=GITHUB_CLIENT_ID
+GITHUB_CLIENT_SECRET=GITHUB_CLIENT_SECRET
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+RESEND_API_KEY=RESEND_API_KEY
