--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mux/mux-uploader-react": "^1.0.0-beta.18",
     "@prisma/client": "^5.15.0",
     "bcryptjs": "^2.4.3",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.18",
     "prettier": "^3.3.1",
     "react": "^18.3.1",
